--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,15 @@
-{% extends 'admin/master.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Flask-Security and Flask-Admin example - Home page</title>
+</head>
 
-{% block body %}
-
-欢迎来到后台管理系统！
-
-{% endblock %}
+<body>
+    Welcome {{ current_user.email }}!<br />
+    If you're seeing this page, you must be logged in.<br />
+    <br />
+    If you're an administrator, you can click <a href="admin">here</a> to administer Users and Roles.<br />
+    <br />
+    Click <a href="/logout">here</a> to log out.<br />
+</body>
+</html>
